--- a/parser/config_files/missing_semicolon.conf
+++ b/parser/config_files/missing_semicolon.conf
@@ -1,6 +1,8 @@
-# missing semicolon
-server {
-    # listen is missing a semicolon
-    listen  80
-    server_name  example.org;
+http {
+    # missing semicolon
+    server {
+        # listen is missing a semicolon
+        listen  80
+        server_name  example.org;
+    }
 }
