--- a/sources/http/Makefile
+++ b/sources/http/Makefile
@@ -68,12 +68,16 @@ clean:
 	@if [ -d $(OBJS_DIR) ]; then \
 		$(RM) $(OBJS_DIR); \
 		echo "$(RED)[ DELETE ]$(RESET) Removed object files."; \
+	else \
+		echo "$(GREEN)[ CLEAN ]$(RESET) No object files to remove."; \
 	fi
 
 fclean: clean
 	@if [ -f $(NAME) ]; then \
 		$(RM) $(NAME); \
 		echo "$(RED)[ DELETE ]$(RESET) Removed $(NAME)."; \
+	else \
+		echo "$(GREEN)[ FCLEAN ]$(RESET) No $(NAME) to remove."; \
 	fi
 	@$(RM) test_http
 # @echo "$(RED)[ DELETE ]$(RESET) Removed $(NAME) and other executables.\n"
