--- a/CGI/Makefile
+++ b/CGI/Makefile
@@ -6,7 +6,7 @@
 #    By: hmohamed <hmohamed@student.42abudhabi.ae>  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/23 12:40:53 by hmohamed          #+#    #+#              #
-#    Updated: 2024/03/14 04:56:34 by hmohamed         ###   ########.fr        #
+#    Updated: 2024/04/06 04:23:36 by hmohamed         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,13 +35,13 @@
 
 
 
-include ../common.mk
+include ../.common.mk
 
 NAME:= libcgi.a
 
-INCLUDES:= -I./ -I../includes/ -I../HTTP/ -I../HTTP/request/ -I../HTTP/response/ -ICGI_handler 
+INCLUDES:= -I./ -I../includes/ -I../sources/HTTP/ -I../sources/HTTP/request/ -I../sources/HTTP/response/ -ICGI_handler 
 
-libhttp = ../HTTP/libhttp.a
+libhttp = ../sources/HTTP/libhttp.a
 
 # CGI
 CGI_DIR:= CGI_handler
@@ -88,7 +88,7 @@ valgrind: all
 	@echo "$(MAGENTA)[ LEAKS ]$(RESET) Checking $(NAME) for leaks."
 
 test_cgi: fclean debug
-	@make -C ../HTTP
+	@make -C ../sources/HTTP
 	$(CXX) $(CXXFLAGS) $(DEBUGFLAGS) $(SANITIZE) $(INCLUDES) $(libhttp) $(TEST_CGI) $(NAME) -o $@
 	@mv *.d $(OBJS_DIR)
 	@echo "$(BLUE)[ TEST ]$(RESET) CGI is now ready for testing."
@@ -99,7 +99,7 @@ clean:
 	@echo "$(RED)[ DELETE ]$(RESET) Removed object files."
 
 fclean: clean
-	make fclean -C ../HTTP
+	make fclean -C ../sources/HTTP
 	@$(RM) $(NAME)
 	@$(RM) test_cgi
 	@echo "$(RED)[ DELETE ]$(RESET) Removed $(NAME) and other executables.\n"
