--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -2,7 +2,7 @@ http {
     server {
         listen 8080;
         client_max_body_size 1M;
-        server_name localhost;
+        server_name TheWired;
 
         root ./.resources/sample_pages;
         index index.html index.htm;
