Fix(CGI):just push clean update

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -4,7 +4,7 @@ http {
         client_max_body_size 1M;
         server_name localhost;
 
-        root ./.resources/sample_pages;
+        root ./.resources/cgi_bin;
         index index.html index.htm;
 
         location / {
