chore: added more tests for duplicate check

--- a/sources/parser/.tests/test_files/client_body_size_check/default_body_size.conf
+++ b/sources/parser/.tests/test_files/client_body_size_check/default_body_size.conf
@@ -2,6 +2,6 @@ http {
     server {
         listen  80;
         server_name  example.org;
-        client_max_body_size 1..5g;
+        # no client_max_body_size set so it should be 1M by default
     }
 }
