--- a/sources/parser/.tests/test_files/duplicate_check/duplicate_server_name.conf
+++ b/sources/parser/.tests/test_files/duplicate_check/duplicate_server_name.conf
@@ -2,6 +2,8 @@ http {
     server {
         listen  80;
         server_name  example.org;
-        client_max_body_size 1..5g;
+        client_max_body_size 1M;
+
+        server_name  example.org;
     }
 }
