chore: fixed webserv.conf test case

--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -1,6 +1,6 @@
 http {
     server {
-        listen 1.1.1.1:90;
+        listen localhost:9000;
         client_max_body_size 1M;
         server_name TheWired;
 
