--- a/.github/workflows/compile-check.yml
+++ b/.github/workflows/compile-check.yml
@@ -15,9 +15,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up C++ environment
-      uses: aminya/setup-cpp@v1
-      with:
-        compiler: gcc
+      uses: egor-tensin/setup-gcc@v1.3
 
     - name: Build project
       run: make
@@ -31,9 +29,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up C++ environment
-      uses: aminya/setup-cpp@v1
-      with:
-        compiler: gcc
+      uses: egor-tensin/setup-gcc@v1.3
 
     - name: Build project
       run: make
