--- a/.github/workflows/compile-check.yml
+++ b/.github/workflows/compile-check.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up C++ environment
-      uses: egor-tensin/setup-gcc@v1.3
+      uses: aminya/setup-cpp@v1
 
     - name: Build project
       run: make
