--- a/.github/workflows/compile-check.yml
+++ b/.github/workflows/compile-check.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up C++ environment
-      uses: aminya/setup-cpp@v1
+      uses: egor-tensin/setup-gcc@v1.3
       with:
         compiler: gcc
 
@@ -29,11 +29,6 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-
-    - name: Set up C++ environment
-      uses: aminya/setup-cpp@v1
-      with:
-        compiler: gcc
 
     - name: Build project
       run: make
