--- a/configs/cgi.conf
+++ b/configs/cgi.conf
@@ -12,7 +12,7 @@ http {
         }
 
         error_page 404 /404.html;
-        location = /404.html {
+        location /404.html {
             root ./.resources/sample_pages;
         }
     }
