--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -12,7 +12,7 @@ http {
         }
 
         error_page 404 /404.html;
-        location = /404.html {
+        location /404.html {
             root ./.resources/sample_pages;
         }
     }
@@ -31,12 +31,12 @@ http {
         }
 
         error_page 404 /404.html;
-        location = /404.html {
+        location /404.html {
             root ./.resources/sample_pages;
         }
 
         error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
+        location /50x.html {
             root ./.resources/sample_pages;
         }
     }
