chore(ConfigParser): cleaned up config files for testing

--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -5,7 +5,7 @@ http {
         server_name TheWired;
 
         root ./.resources/sample_pages;
-        index index.html index.htm;
+        index index.html;
 
         location / {
             root ./.resources/sample_pages;
@@ -22,12 +22,12 @@ http {
         server_name localhost;
 
         root ./.resources/sample_pages;
-        index index.html index.htm;
+        index index.html;
         autoindex on;
 
         location / {
             root ./.resources/sample_pages;
-            index index.html index.htm;
+            index index.html;
         }
 
         error_page 404 /404.html;
