--- a/configs/cgi.conf
+++ b/configs/cgi.conf
@@ -4,8 +4,7 @@ http {
         client_max_body_size 1M;
         server_name localhost;
 
-        root ./sources/CGI/.tests;
-        index index.html index.htm;
+        index index.html;
 
         location / {
             root ./.resources/sample_pages;
@@ -14,6 +13,10 @@ http {
         error_page 404 /404.html;
         location /404.html {
             root ./.resources/sample_pages;
+        }
+
+        location /cgi-bin {
+            root ./sources/.tests;
         }
     }
 }
