--- a/sources/parser/.tests/test_files/config.conf
+++ b/sources/parser/.tests/test_files/config.conf
@@ -7,12 +7,14 @@ http {
 
         location / {
             index  index.html;
+            allow_methods GET;
         }
 
         error_page  404              /404.html;
 
         error_page   500 502 503 504  /50x.html; #comment
         location /50x.html {
+            allow_methods GET;
         }
     }
 }
