--- a/configs/default.conf
+++ b/configs/default.conf
@@ -4,14 +4,14 @@ server {
     server_name localhost;
 
     root ./.resources/sample_pages;
-    index index.html index.htm;
+    index index.html;
 
     location / {
-        root ./.resources/sample_pages;
+        allow_methods GET;
     }
 
     error_page 404 /404.html;
     location /404.html {
-        root ./.resources/sample_pages;
+        allow_methods GET;
     }
 }
