--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -8,11 +8,13 @@ server {
 
     location / {
         root ./.resources/sample_pages;
+        allow_methods GET;
     }
 
     error_page 404 /404.html;
     location /404.html {
         root ./.resources/sample_pages;
+        allow_methods GET;
     }
 }
 server {
@@ -27,15 +29,18 @@ server {
     location / {
         root ./.resources/sample_pages;
         index index.html;
+        allow_methods GET;
     }
 
     error_page 404 /404.html;
     location /404.html {
         root ./.resources/sample_pages;
+        allow_methods GET;
     }
 
     error_page 500 502 503 504 /50x.html;
     location /50x.html {
         root ./.resources/sample_pages;
+        allow_methods GET;
     }
 }
