--- a/sources/parser/.tests/test_files/allow_methods_check/invalid_method.conf
+++ b/sources/parser/.tests/test_files/allow_methods_check/invalid_method.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name localhost;
     root /var/www/html;
-    index index.html index.htm index.php;
+    index index.html;
 
     location / {
         allow_methods GET POST lol;
