chore: adjusted config file

--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -7,13 +7,11 @@ server {
     index index.html;
 
     location / {
-        root ./.resources/sample_pages;
         allow_methods GET;
     }
 
     error_page 404 /404.html;
     location /404.html {
-        root ./.resources/sample_pages;
         allow_methods GET;
     }
 }
@@ -27,20 +25,17 @@ server {
     autoindex on;
 
     location / {
-        root ./.resources/sample_pages;
-        index index.html;
+        index index.htm;
         allow_methods GET;
     }
 
     error_page 404 /404.html;
     location /404.html {
-        root ./.resources/sample_pages;
         allow_methods GET;
     }
 
     error_page 500 502 503 504 /50x.html;
     location /50x.html {
-        root ./.resources/sample_pages;
         allow_methods GET;
     }
 }
