--- a/configs/cgi.conf
+++ b/configs/cgi.conf
@@ -3,18 +3,20 @@ server {
     client_max_body_size 1M;
     server_name localhost;
 
+    root ./.resources/sample_pages;
     index index.html;
 
     location / {
-        root ./.resources/sample_pages;
+        allow_methods GET;
     }
 
     error_page 404 /404.html;
     location /404.html {
-        root ./.resources/sample_pages;
+        allow_methods GET;
     }
 
     location /cgi-bin {
-        root ./sources/.tests;
+        root ./.resources/cgi-bin;
+        allow_methods GET;
     }
 }
