feat(Autoindex): added directory listing
- cleaned up make_error_body()
- edited Delete 200 response body
- cleaned up Logger
- working on implementing location hadnling in server

--- a/configs/default.conf
+++ b/configs/default.conf
@@ -5,8 +5,11 @@ server {
 
     root ./.resources/sample_pages;
     index index.html;
+    allow_methods GET;
 
     location / {
+        # root ./.resources;
+        autoindex on;
         allow_methods GET;
     }
 
