--- a/configs/default.conf
+++ b/configs/default.conf
@@ -3,7 +3,7 @@ server {
     client_max_body_size 1M;
     server_name localhost;
 
-    root ./.resources/sample_pages;
+    root ./.resources/html;
     index index.html;
 
     location / {
