--- a/configs/default.conf
+++ b/configs/default.conf
@@ -10,11 +10,12 @@ server {
     location / {
         # root ./.resources;
         autoindex on;
-        allow_methods GET;
+        allow_methods GET POST;
     }
 
-    error_page 404 /404.html;
-    location /404.html {
-        allow_methods GET;
+    error_page 404 /test.html;
+
+    location /upload {
+        allow_methods POST;
     }
 }
