feat(conf): fix something

--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -20,8 +20,8 @@ server {
     client_max_body_size 10M;
     server_name localhost;
 
-    root ./.resources/sample_pages;
-    index index.html;
+    root ./.resources;
+    index /html/index.html;
     autoindex on;
 
     location / {
