--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -1,5 +1,5 @@
 server {
-    listen localhost:9000;
+    listen 9000;
     client_max_body_size 1M;
     server_name TheWired;
 
@@ -19,25 +19,14 @@ server {
 server {
     listen 8001;
     client_max_body_size 10M;
-    server_name localhost;
+    server_name OtherServer;
 
     root ./.resources;
     index index.html;
     autoindex on;
 
     location / {
-		root ./.resources/html;
-        # index index.html;
-        allow_methods GET;
-    }
-
-    error_page 404 /404.html;
-    location /404.html {
-        allow_methods GET;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location /50x.html {
+        root ./.resources/html;
         allow_methods GET;
     }
 }
