feat: improved location parsing

--- a/configs/webserv.conf
+++ b/configs/webserv.conf
@@ -29,4 +29,19 @@ server {
         root ./.resources/html;
         allow_methods GET;
     }
+
+    location /assets {
+        root ./.resources/assets;
+        allow_methods GET;
+    }
+
+    location /cgi-bin {
+        root ./.resources/cgi-bin;
+        allow_methods GET;
+    }
+
+    location /upload {
+        root ./.resources/upload;
+        allow_methods POST;
+    }
 }
